[tool.poetry]
name = "data_pipeline"
version = "0.1.0"
description = "data pipeline for practice app"
authors = ["Nicola Filosi"]
license = "free"
readme = "README.md"
packages = [{include = "data_pipeline"}]

[tool.poetry.dependencies]
python = "3.10.4"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
black = "^23.12.1"
isort = "^5.13.2"
pylint = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
