[tool.poetry]
name = "db_api"
version = "0.1.0"
description = "data pipeline for practice app"
authors = ["Nicola Filosi"]
license = "free"
readme = "README.md"
packages = [{include = "db_api"}]

[tool.poetry.dependencies]
python = "~3.10"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
black = "^23.12.1"
isort = "^5.13.2"
pylint = "^3.0.3"
pandas = "^2.1.4"
polars = "^0.20.3"
great-expectations = "^0.18.7"
ruamel-yaml = "<0.18"
pyarrow = "^14.0.2"
ydata-profiling = "^4.6.4"

# Formatting
logging = "^0.4.9.6"
[tool.isort]
profile = "black"

[tool.pydocstyle]
convention = "google"

[tool.pylint]
ignore = [".venv", "tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
