[tool.poetry]
name = "forecasting model"
version = "0.1.0"
description = "Sales forecasting model"
authors = ["Nicola Filosi"]
license = "free"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
tensorflow-io-gcs-filesystem = "0.34.0"
tensorflow = "^2.11"
polars = "^0.20.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
